--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
     "fastify": "^3.9.2",
+    "fastify-static": "^3.4.0",
     "pg": "^8.5.1",
     "playwright": "^1.7.1"
   },
