--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -8,6 +8,7 @@
     	"eslint:recommended",
     	"prettier"
     ],
+    "parser": "babel-eslint",
     "parserOptions": {
        "ecmaVersion": 2020
    	},
