--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "playwright": "^1.7.1"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
