--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "ci:server": "cd server && npm ci",
     "ci:client": "cd client && npm ci",
     "ci": "npm run ci:server && npm run ci:client",
-    "build": "cd client && npm run build",
-    "start": "npm run build && cd server && npm run start"
+    "install:client": "cd client && npm install",
+    "install:server": "cd server && npm install",
+    "install": "npm run install:client && npm run install:server",
+    "build:client": "cd client && npm run build",
+    "start": "cd server && npm run start",
+    "build": "npm run install && npm run build:client && npm start"
   },
   "license": "ISC",
   "devDependencies": {
