--- a/server/package.json
+++ b/server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "cd src && npm node server",
+    "start": "cd src && node server",
     "lint": "eslint src/**/*.js",
     "format": "prettier --write src/**/*.js"
   },
