--- a/client/package.json
+++ b/client/package.json
@@ -27,11 +27,7 @@
   "eslintConfig": {
     "extends": [
       "react-app",
-      "react-app/jest",
-      "prettier"
-    ],
-    "plugins": [
-      "prettier"
+      "react-app/jest"
     ]
   },
   "browserslist": {
@@ -47,8 +43,6 @@
     ]
   },
   "devDependencies": {
-    "eslint-config-prettier": "^7.2.0",
-    "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1"
   }
 }
